fix message text overflow

--- a/DChat.Application.Shared.Server/wwwroot/chat.css
+++ b/DChat.Application.Shared.Server/wwwroot/chat.css
@@ -82,6 +82,7 @@ main {
     margin-top: 0.2em;
     font-family: Verdana, Tahoma, sans-serif;
     font-size: small;
+    overflow-wrap: break-word;
 }
 
     .message-body img {
